--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
         "email": "info@webdesigniran.com"
     },
     "devDependencies": {
+        "del": "^5.1.0",
+        "gulp": "^4.0.2",
+        "gulp-plumber": "^1.2.1",
+        "gulp-rename": "^1.4.0",
+        "gulp-sass": "^4.0.2"
     }
 }
